--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,7 @@
 tasks:
+  - name: utilities
+    before: |
+      sudo apt-get install tree
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
