--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,8 @@
 tasks:
   - name: utilities
     before: |
-      sudo apt-get install tree
+      sudo apt-get update
+      sudo apt-get install -y tree
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
